# pun_so_tshia

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env.example  README.md  download_data.py  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: trucks.py
backend/app/core/: config.py
backend/data/: Schedule.json
docs/: architecture.md
frontend/: package-lock.json  package.json
frontend/public/: Kaohsiung.json
frontend/src/: App.vue
frontend/src/assets/: Kaohsiung.json
frontend/src/components/: HelloWorld.vue  MapViewer.vue  TruckList.vue
frontend/src/composables/: useGeolocation.ts
frontend/src/stores/: truckSchedule.ts  truckStore.ts
frontend/src/views/: HomeView.vue
scripts/: check-env.ps1
